--- a/readme/webmodule/changelog.txt
+++ b/readme/webmodule/changelog.txt
@@ -6,6 +6,9 @@ Web Module 1.4   [Release on 09/09/2009] [testing: high] [target: production]
 - Module icons are not refreshed when changing the icons using the module wizards.
 - Large module icons shown for helper modules. 
 
+[Changed]
+- Files are now downloadable links.
+
 
 -----------------------------------------------------------------------------------------
 Web Module 1.3   [Release on 25/01/2009] [testing: high] [target: production]
