--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -12,6 +12,7 @@ web module).
 - Encoding issue in "Description"s IMDB import. 
 - Bol.com did no longer retrieve the description (page was changed).
 - Incorrect font for dropdown / list boxes.
+- Contact person dropdown / list box remains empty (loan administration).
 
 [Changed]
 - Alapage.com has been redesigned. I am currently working on re-implementing this 
@@ -27,8 +28,10 @@ web module).
 - Server Settings; online servers can now have individual settings. The amazon
   server can now be configured to retrieve user reviews (or not). 
 
-I would like to thank François Rey for supplying the code for the 'directory as drives'
-setting.
+[New]
+- Directories can now be marked as being drives. This is essentially a fix for non 
+  Windows platforms. I would like to thank François Rey for supplying the code for the 
+  'directory as drives' functionality.
 
 
 -----------------------------------------------------------------------------------------
