--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -44,6 +44,7 @@ Thanks to Ingo Macherius for designing and donating the new movie report
 - Added a summary tab (for new installations only) as the item form was getting a tad
   cluttered with fields.
 - File privileges checks are now performed on the files in the distributions.
+- <.SRT> will no longer be added as a language for movies (Movie File Import).
 
 [New]
 - Directories can now be marked as being drives. This is essentially a fix for non 
