--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -11,6 +11,7 @@ Thanks to Ingo Macherius for designing and donating the new movie report
 (List Report (xvids) and for helping to test the upgrade process.
 
 [Fixed]
+- The version checker does not recognize 3.5 as being a higher version then 3.4.19.
 - ISBN search with ISBN's containing non-digits now also (finally) works.
 - Movie import "settings" Tab: Storage Medium items are gone.
 - Encoding issue in IMDB import. 
@@ -45,6 +46,9 @@ Thanks to Ingo Macherius for designing and donating the new movie report
   cluttered with fields.
 - File privileges checks are now performed on the files in the distributions.
 - <.SRT> will no longer be added as a language for movies (Movie File Import).
+- A new field has been added to the software module: version.
+- Three new fields have been added the book module: binding, edition type and
+  edition comment. 
 
 [New]
 - Directories can now be marked as being drives. This is essentially a fix for non 
@@ -52,8 +56,9 @@ Thanks to Ingo Macherius for designing and donating the new movie report
   'directory as drives' functionality.
 - The software, music album, audio CD, book and movie module have 2 new fields:
   language and country.  
-- An additional movie report has been added. This report was created by 
-  Ingo Macherius
+- Two new property modules: country and language.
+- An additional movie report (List Report (xvids)) has been added. 
+  This report is created by Ingo Macherius
 
 
 -----------------------------------------------------------------------------------------
