*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.5 [Release on xx/09/2009] [testing: high] [target: production]
+Data Crow 3.5 [Release on 20/09/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 The distribution has been changed. There is no longer a separate Web Module package.
 Instead all have been merged together. This makes the distribution a bit larger but puts
@@ -46,6 +46,9 @@ Thanks to Ingo Macherius for designing and donating the new movie report
   cluttered with fields.
 - File privileges checks are now performed on the files in the distributions.
 - <.SRT> will no longer be added as a language for movies (Movie File Import).
+- A new field has been added to the software module: version.
+- Three new fields have been added the book module: binding, edition type and
+  edition comment. 
 
 [New]
 - Directories can now be marked as being drives. This is essentially a fix for non 
@@ -53,8 +56,9 @@ Thanks to Ingo Macherius for designing and donating the new movie report
   'directory as drives' functionality.
 - The software, music album, audio CD, book and movie module have 2 new fields:
   language and country.  
-- An additional movie report has been added. This report was created by 
-  Ingo Macherius
+- Two new property modules: country and language.
+- An additional movie report (List Report (xvids)) has been added. 
+  This report is created by Ingo Macherius
 
 
 -----------------------------------------------------------------------------------------
