--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -15,8 +15,10 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
 - File Importer now remembers the selected directory usage. 
 
 [New]
-- ISBN Extraction from PDF documents using ISBNExtractor 
+- File Import for Books: ISBN Extraction from PDF documents using ISBNExtractor 
   (http://isbnextractor.sourceforge.net).
+- Module Export Wizard
+- Module Import Wizard
 
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
