--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -16,10 +16,15 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
 - Quick View: filename is now a click-able link.
 
 [New]
-- File Import for Books: ISBN Extraction from PDF documents using ISBNExtractor 
-  (http://isbnextractor.sourceforge.net).
 - Module Export Wizard
 - Module Import Wizard
+- Module Copy Wizard
+- File Import for Books: ISBN Extraction from PDF documents using ISBNExtractor 
+  (http://isbnextractor.sourceforge.net).
+- A new parameter has been added: -datadir:<directory>. This parameter can be used to 
+  specify an alternative location for the data folder of Data Crow. Note that the images
+  will still be written to webapp/datacrow/mediaimages (in the installation folder).
+  Substitute spaces by %20.
 
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
